manifest/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Type_Market_Segment__c</fullName>
        <formula>text(Contact.Account.Account_Type__c )&amp;&quot; / &quot;&amp; text(Contact.Account.Market_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type / Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Activity_Date__c</fullName>
        <formula>Contact.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Activity_Date__c</fullName>
        <formula>Lead.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <formula>IF (ContactId &lt;&gt;&quot;&quot;,
      TEXT(Contact.Lead_Source_Detail__c) ,
      IF( LeadId &lt;&gt;&quot;&quot;,
          TEXT(Lead.Lead_Source_Detail__c) ,
          &quot;&quot;
        )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Account_Last_Activity_Date__c</fullName>
        <formula>Contact.Account.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Account Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Account_Open_Opps__c</fullName>
        <formula>Contact.Account.Number_of_Open_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Account Open Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Account_Status__c</fullName>
        <formula>text(Contact.Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Account_Won_Opportunities__c</fullName>
        <formula>Contact.Account.Number_of_Won_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Account Won Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of the source account used to create this record</description>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Use this as a backend field to identify the source of Account</description>
        <inlineHelpText>Use this as a backend field to identify the source of Account</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>HUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>